fix menu button styling

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,6 +1,7 @@
 .header {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding-block: 2rem;
 }
 
@@ -24,27 +25,19 @@
 
 .menu-button {
     position: relative;
-    background-color: var(--color-primary);
-    height: 1rem;
-    width: 1rem;
+    height: 4px;
+    width: 20px;
+    display: flex;
+    justify-content: space-between;
 }
 
-/* .menu-button div,
-.menu-button div::before,
-.menu-button div::after {
+.menu-button div,
+.menu-button::before,
+.menu-button::after {
+    content: '';
+    display: block;
     height: 4px;
     width: 4px;
     border-radius: 50%;
     background-color: var(--color-primary);
 }
-
-.menu-button div::before,
-.menu-button div::after {
-    content: '';
-    position: absolute;
-    left: -8px;
-}
-
-.menu-button div::after {
-    left: -16px;
-} */
