add color themes

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -31,6 +31,8 @@ button {
 .app {
     display: grid;
     grid-template-columns: var(--grid-container);
+    background-color: var(--color-secondary);
+    color: var(--color-primary);
 }
 
 header,
